# mergequeue

./: .dockerignore  .env.example  .envrc  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  mise.toml
.github/workflows/: pages.yml  release.yml  rust.yml
backend/: Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20260625_131611_init.rs  m20260625_151028_github_app.rs  m20260625_165821_auth.rs  m20260626_111218_staging_progress.rs  m20260626_115024_merge_blocked.rs  m20260626_182440_queue_ledger.rs  m20260627_092129_queues.rs
backend/src/: config.rs  error.rs  main.rs  runtime.rs
backend/src/api/: dto.rs  error.rs  mod.rs
backend/src/auth/: error.rs  mod.rs  oauth.rs  store.rs
backend/src/crypto/: error.rs  mod.rs
backend/src/github/: app.rs  client.rs  mod.rs
backend/src/queue/: engine.rs  mod.rs  model.rs  state.rs
backend/src/setup/: mod.rs
backend/src/store/: batch.rs  entity.rs  entry.rs  installation.rs  ledger.rs  mod.rs  queue.rs  repo.rs
backend/src/webhook/: mod.rs
docs/: architecture.md  engine.md
web/: justfile  next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts  tsconfig.json
web/.typeshare-cache/: .crates.toml  .crates2.json  .global-cache
web/.typeshare-cache/registry/cache/index.crates.io-1949cf8c6b5b557f/: bstr-1.12.2.crate  convert_case-0.8.0.crate  flexi_logger-0.31.9.crate  ignore-0.4.26.crate  joinery-3.1.0.crate  lazy_format-2.0.3.crate  typeshare-cli-1.13.4.crate  typeshare-core-1.13.4.crate  unicode-segmentation-1.13.3.crate
web/.typeshare-cache/registry/src/index.crates.io-1949cf8c6b5b557f/bstr-1.12.2/: .cargo_vcs_info.json  Cargo.toml
web/app/: globals.css  landing.css  layout.tsx  opengraph-image.tsx  page.tsx
web/app/app/: page.tsx
web/app/docs/: docs.css  layout.tsx
web/app/docs/[[...slug]]/: page.tsx
web/components/: ActiveBatch.tsx  DashboardCta.tsx  DashboardLink.tsx  DepartureBoard.tsx  InstallLine.tsx  NavAuth.tsx  PlatformSwitcher.tsx  RunHistory.tsx  SetupGate.tsx
web/content/docs/: ci-integration.mdx  configuration.mdx  getting-started.mdx  how-it-works.mdx  index.mdx  meta.json  self-hosting.mdx
web/lib/: api-types.ts  api.ts  demo.ts  layout.shared.tsx  rel-time.ts  state.ts  static-site.ts  use-landing-auth.ts
(+41 files in other folders)
