[package]
name = "migration"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-orm-migration.workspace = true
tokio.workspace = true
async-trait = "0.1"
